2.3/logs/rust_type_mismatch.log
error[E0308]: mismatched types
 --> type_mismatch.rs:7:17
  |
7 |     let _ = add(s, 1);
  |             --- ^ expected `i32`, found `&str`
  |             |
  |             arguments to this function are incorrect
  |
note: function defined here
 --> type_mismatch.rs:1:4
  |
1 | fn add(a: i32, b: i32) -> i32 {
  |    ^^^ ------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
